2022-10-10  Brian Ripley

	* DESCRIPTION (Version): 3.1-160 (released)

2022-08-24  Brian Ripley

	* src/nlmefit.c: Fix for -Wstrict-prototypes.

2022-07-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 3.1-159

	* R/gnls.R (gnls): 'if (deparse(params[[nm]][[3]]) != "1")' fails
	for long formulas (R-help list, thanks to Bill Dunlap, Jul 24)

2022-07-05  Brian Ripley

	* man/{gls,lme}: document the prohibition on  (rather than
	ignoring of) offset() terms.

2022-06-13  Brian Ripley

	* DESCRIPTION (Version): 3.1-158 (released)
	* R/lme.R (formula.lme): get the formula from the terms instead of
	re-evaluating the call (with the wrong scope), fixing PR#15892.
	* tests/scoping.R: add corresponding regression test.
	* R/nlsList.R: use inherits() instead of comparing class to string.

2022-03-25  Brian Ripley

	* DESCRIPTION (Version): 3.1-157 (released)

2022-03-24  Sebastian Meyer  <Sebastian.Meyer@R-project.org>

	* R/nlme.R (nlme.formula):
	* R/gnls.R (gnls): revert check for offset() terms in non-linear
	models (avoid symbolic interpretation of arithmetic expressions).
	* R/lme.R (formula.lme): defer fix for scoping issue to give more
	time to update reverse dependencies

2022-03-22  Brian Ripley

	* DESCRIPTION (Version): 3.1-156 (unreleased)

2022-03-18  Sebastian Meyer  <Sebastian.Meyer@R-project.org>

	* R/gls.R: keep "terms" from gls() for use in predict.gls(),
	fixing PR#18283.
	* R/zzMethods.R, NAMESPACE: drop formula-based terms.gls().
	* tests/gls.R: add corresponding regression test.

	* R/gls.R (formula.gls):
	* R/lme.R (formula.lme): get the formula from the terms instead of
	re-evaluating the call (with the wrong scope), fixing PR#15892.
	* tests/scoping.R: add corresponding regression test.

2022-03-17  Sebastian Meyer  <Sebastian.Meyer@R-project.org>

	* R/lme.R (lme.formula):
	* R/nlme.R (nlme.formula):
	* R/gls.R (gls):
	* R/gnls.R (gnls): stop() at offset() terms, fixing PR#17880.
	(They were previously ignored.)
