@@ -1,7 +1,7 @@
-5af49a7c2483bd3313b3c709cfbc2c95 *ChangeLog
-da8dab81e22d9cc8a1e7b9b1105f399c *DESCRIPTION
+586f4543898298900699a5e32a64a887 *ChangeLog
+cc6d6d5eb57d6bbf4021a401df67310c *DESCRIPTION
 398eb829c5b09bf5b661094916d897e4 *LICENSE.note
-89954b4aec562f40797f6a54d9ce94f3 *NAMESPACE
+ee21ac2e9a5c8551a6dea8293c816b5a *NAMESPACE
 af82a6b780b7157da96d3e996fa2b949 *R/VarCorr.R
 fbc89f7c11109a83d6e3b8448b5a90a1 *R/VarCov.R
 d85fceb92a1b8d7ce95f1bab80e584e6 *R/corStruct.R
@@ -16,13 +16,13 @@ cf9c471ec0e6f401d7deab5cd1bce8ca *R/modelStruct.R
 d8885be3c7d8de6072c9aa1b97a74342 *R/newMethods.R
 e291ed8acfeb4c0638d6a9badf85b910 *R/nlme.R
 36fb74b77cf607f7351d47f8fde7ab1f *R/nlsList.R
-ecb308e6c9ca44b65c8650655f996e8a *R/pdMat.R
+dfd252a1a24384dcba0b509e9893308a *R/pdMat.R
 c0c6f681f27546bd890c243979498f2d *R/reStruct.R
 a6152e553e27c0e10a705050d11d45b5 *R/simulate.R
 5f291ac0307fe9f1006720147d365078 *R/varFunc.R
 76d0ab453769b7203e465d1d2c98c052 *R/zzMethods.R
 b2a9dc6b6cdb787d0486e80d3454833b *TODO
-0c6ad5b3446721162c89589e8077ab1c *build/partial.rdb
+ea124a494ad7922985532ad3b308e4d5 *build/partial.rdb
 8f2e4f663d2e4beb1143c28187c6653d *data/Alfalfa.rda
 28e82e652a218134a9b880143f611516 *data/Assay.rda
 041ca0f6b3ae898f7b0f7a62f16be9fd *data/BodyWeight.rda
@@ -258,11 +258,11 @@ a3a54a6f6ea3258ed61dbcb9caabb538 *man/isBalanced.Rd
 b399ad8ac30ebae148c2750863b9577b *man/isInitialized.Rd
 025532bab39666ecef7c05831187c5dd *man/lmList.Rd
 02334662a6ca3e5f2925fabd137a79b6 *man/lmList.groupedData.Rd
-6fdd6be46f932e308cfca1575a4c0857 *man/lme.Rd
+ecc35494ff70757ae4aea1585d720978 *man/lme.Rd
 3c9fa6a9877052e389ffda741e2ba4d2 *man/lme.groupedData.Rd
 72faf3c9623f1ea10d1aaf08036a2cc9 *man/lme.lmList.Rd
 fe7057cd4ca113498b2948a0af9dc16f *man/lmeControl.Rd
-8ad3a4294b6867da523b673c81d43f67 *man/lmeObject.Rd
+9f3a52e839e722698aef87047d74cc97 *man/lmeObject.Rd
 13dc0abcf5cefea56089b4e02e627b4d *man/lmeStruct.Rd
 0a183f1abced3b6e2e27fac21706dfff *man/logDet.Rd
 ead2832df5ec5e188e6b4ca16f4428a2 *man/logDet.corStruct.Rd
@@ -280,7 +280,7 @@ f3b113b8aedae437708a7fcd167d3d73 *man/logLik.varFunc.Rd
 4751793249ec770d44339a9561866ab6 *man/model.matrix.reStruct.Rd
 60a29b3fd8b1e118e73473e1db207c42 *man/needUpdate.Rd
 3e05ee655b352dbb2f67cdc09fa80ed3 *man/needUpdate.modelStruct.Rd
-076f54ae79a2d6d5ec1a65858f44329e *man/nlme.Rd
+4757289614d32f712cfd11d61137ce8a *man/nlme.Rd
 63489a1c7a0630b41241c2ea6fdfe2f6 *man/nlme.nlsList.Rd
 6e65c70f06db1be400147344da3f1c84 *man/nlmeControl.Rd
 bef2b44254061ff95fce8520d0a522cc *man/nlmeObject.Rd
@@ -300,8 +300,8 @@ f9f9c13acf74dfea291e23c7c63c9983 *man/pdFactor.Rd
 7dae36911817b4ce144eee042f50eb27 *man/pdFactor.reStruct.Rd
 7799a8aafc9e4d25878beec1d08c9a50 *man/pdIdent.Rd
 29fd73d168d9dcc80413d0f1a3988388 *man/pdLogChol.Rd
-a5d8a5b1c90dec35c67ecc5a1906e3f7 *man/pdMat.Rd
-e6bd54c4f5a59912f5aa8957fe2c831d *man/pdMatrix.Rd
+a735a9267525321ff4e452d203075ef3 *man/pdMat.Rd
+910b0a2544e31cd107a6ea511ead012e *man/pdMatrix.Rd
 b84f89573def38056f3010d3d1a87dcf *man/pdMatrix.reStruct.Rd
 5f06972eb22dfccd71057d67654f4eed *man/pdNatural.Rd
 4a2e34fa8aed0c6d04be6269d15b24a8 *man/pdSymm.Rd
@@ -333,7 +333,7 @@ a24baf9d274faf0ee6a0b812bf0c67c3 *man/print.summary.pdMat.Rd
 04f98816fa09bf9b31c2e616fe258f12 *man/random.effects.Rd
 a29f4b3be852c55acdfc15b09c3ffca4 *man/ranef.lmList.Rd
 3c1cfac382e04a0147e047c27ac32696 *man/ranef.lme.Rd
-6e4f535a7c7dee94d5d3656dee415a7e *man/reStruct.Rd
+6824ed4cbfa520ad4ac83be675ab9646 *man/reStruct.Rd
 30311327dee2255284dcaf920e7ec687 *man/recalc.Rd
 4681091f21d53d0fba1afe8e620ad2c3 *man/recalc.corStruct.Rd
 c2bee8f3f6936f91cf4c9e14ff584f55 *man/recalc.modelStruct.Rd
